--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
 
 
-    <link rel="shortcut icon" href="/src/img/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="src/img/favicon-32x32.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="/src/css/style.css">
-    <link rel="stylesheet" href="/src/css/reset.css">
-    <link rel="stylesheet" href="/src/css/responsivo.css">
+    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/reset.css">
+    <link rel="stylesheet" href="src/css/responsivo.css">
 
     <title>Frontend Mentor | Product preview card component</title>
 
@@ -30,9 +30,9 @@
 
         <picture>
 
-            <source media="(max-width: 660px)" srcset="/src/img/image-product-mobile.jpg">
+            <source media="(max-width: 660px)" srcset="src/img/image-product-mobile.jpg">
 
-            <img title="Gabrielle Essence Eau De Parfum" src="/src/img/image-product-desktop.jpg" alt="Image-product">
+            <img title="Gabrielle Essence Eau De Parfum" src="src/img/image-product-desktop.jpg" alt="Image-product">
 
         </picture>
 
